<resources>
    <string name="app_name">Movie App MVP Dagger2</string>

    <string name="vote">%1$s / 10</string>
    <string name="trailers">Trailers: </string>
    <string name="reviews">Reviews: </string>

    <string name="no_internet_error_message">There is no internet connection!</string>
    <string name="no_movies">There is no movies!</string>
    <string name="no_favorite">There is no movies added to your favorites yet!</string>

    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_favorite">Favorite</string>

    <string name="add_favorite">Add To Favorite</string>
    <string name="remove_favorite">Remove From Favorite</string>

    <string name="poster_content_description">Movie Poster</string>
    <string name="poster_backdrop">Poster Backdrop</string>
    <string name="add_to_favorite">Add to favorite button</string>
    <string name="youtube_icon">Youtube icon</string>
</resources>
