<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/large_margin">

            <ImageView
                android:id="@+id/back_drop_poster"
                android:layout_width="@dimen/no_margin"
                android:layout_height="240dp"
                android:layout_marginEnd="@dimen/no_margin"
                android:layout_marginLeft="@dimen/no_margin"
                android:layout_marginRight="@dimen/no_margin"
                android:layout_marginStart="@dimen/no_margin"
                android:layout_marginTop="@dimen/no_margin"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/placeholder_background"
                android:contentDescription="@string/poster_backdrop"/>

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/poster_detail_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:adjustViewBounds="true"
                android:transitionName="movie_poster"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_drop_poster"
                app:srcCompat="@drawable/placeholder_background"
                android:contentDescription="@string/poster_content_description"/>

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/regular_margin"
                android:layout_marginStart="@dimen/regular_margin"
                android:fontFamily="sans-serif"
                android:paddingEnd="@dimen/regular_margin"
                android:paddingStart="@dimen/no_padding"
                android:textSize="@dimen/text_header"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movie_poster"
                tools:text="Ghost in the Shell" />

            <TextView
                android:id="@+id/movie_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginStart="@dimen/regular_margin"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/text_sub_header"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                tools:text="2017-03-29" />

            <TextView
                android:id="@+id/movie_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginStart="@dimen/regular_margin"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:paddingEnd="@dimen/regular_margin"
                android:paddingStart="@dimen/no_padding"
                android:textSize="@dimen/text_sub_header"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_date"
                tools:text="6.7 / 10" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="@dimen/min_button_height"
                android:layout_marginEnd="@dimen/regular_margin"
                android:layout_marginStart="@dimen/regular_margin"
                android:layout_marginTop="8dp"
                android:padding="@dimen/xx_small_padding"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_rate"
                tools:src="@drawable/ic_unlike"
                android:contentDescription="@string/add_to_favorite"/>

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintLeft_toLeftOf="@+id/movie_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                tools:text="This is a movie description. his is a movie description, his is a movie description" />

            <View
                android:id="@+id/action_divider_trailer"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/regular_margin"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin"
                android:layout_marginStart="@dimen/regular_margin"
                android:layout_marginTop="@dimen/regular_margin"
                android:background="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

            <TextView
                android:id="@+id/trailer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingBottom="@dimen/medium_padding"
                android:paddingTop="@dimen/medium_padding"
                android:text="@string/trailers"
                android:textSize="@dimen/text_header"
                app:layout_constraintLeft_toLeftOf="@+id/movie_overview"
                app:layout_constraintRight_toRightOf="@+id/movie_overview"
                app:layout_constraintTop_toBottomOf="@+id/action_divider_trailer" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/trailer_name"
                app:layout_constraintLeft_toLeftOf="@+id/movie_overview"
                app:layout_constraintRight_toRightOf="@+id/movie_overview" />
            <View
                android:id="@+id/action_divider_review"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/trailer_recycler_view"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginStart="@dimen/regular_margin"
                android:layout_marginEnd="@dimen/regular_margin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/regular_margin"
                android:layout_marginRight="@dimen/regular_margin" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/reviews_name"
                android:text="@string/reviews"
                android:textSize="@dimen/text_header"
                android:paddingTop="@dimen/medium_padding"
                android:paddingBottom="@dimen/medium_padding"
                android:fontFamily="sans-serif"
                app:layout_constraintTop_toBottomOf="@+id/action_divider_review"
                app:layout_constraintLeft_toLeftOf="@+id/movie_overview"
                app:layout_constraintRight_toRightOf="@+id/movie_overview"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:layout_constraintTop_toBottomOf="@+id/reviews_name"
                app:layout_constraintLeft_toLeftOf="@+id/movie_overview"
                app:layout_constraintRight_toRightOf="@+id/movie_overview" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>